@@ -8,3 +8,7 @@ class IOpengeverSpecific(IDefaultPloneLayer):
     """Marker interface that defines a Zope 3 browser layer specific for OpenGever.
     """
 
+class IIzugSpecific(IDefaultPloneLayer):
+    """Marker interface that defines a Zope 3 browser layer specific for izug.
+    """
+
