@@ -40,12 +40,10 @@
     
     <!-- portal top -->
     <order manager="plone.portaltop" skinname="iZug Base Theme">
-        <viewlet name="izug.editmenu" insert-before="*"/>
         <viewlet name="plone.header"/>
         <viewlet name="plone.app.i18n.locales.languageselector"/>
     </order>
     <hidden manager="plone.portaltop" skinname="iZug Base Theme">
-        <viewlet name="izug.editmenu"/>
         <viewlet name="plone.path_bar"/>
         <viewlet name="plone.personal_bar"/>
     </hidden>
